# w0bmarkov

./: .gitignore  Cargo.toml  ircconfig.toml
migrations/2019-11-11-142526_create_words/: down.sql  up.sql
src/: getsentence.sql  lib.rs  schema.rs
